<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

<item android:id="@+id/a1"
 android:icon="@drawable/ic_bank"
  android:title="@string/a1" />

  <item android:id="@+id/a2"    
    android:icon="@drawable/ic_chicken"
    android:title="@string/a2" />

  <item android:id="@+id/a3"    
    android:icon="@drawable/ic_train"
    android:title="@string/a3" />

  <item android:id="@+id/a4"    
    android:icon="@drawable/ic_welding"
    android:title="@string/a4" />

  <item android:id="@+id/a5"    
    android:icon="@drawable/ic_pvc"
    android:title="@string/a5" />

  <item android:id="@+id/a6"    
    android:icon="@drawable/ic_car"
    android:title="@string/a6" />

  <item android:id="@+id/a7"    
    android:icon="@drawable/ic_elec"
    android:title="@string/a7" />

  <item android:id="@+id/a8"    
    android:icon="@drawable/ic_barber"
    android:title="@string/a8" />

  <item android:id="@+id/a9"    
    android:icon="@drawable/ic_fish"
    android:title="@string/a9" />

  <item android:id="@+id/a10"    
    android:icon="@drawable/ic_sewing"
    android:title="@string/a10" />

  <item android:id="@+id/a11"    
    android:icon="@drawable/ic_frontend"
    android:title="@string/a11" />

  <item android:id="@+id/a12"    
    android:icon="@drawable/ic_wire"
    android:title="@string/a12" />

  <item android:id="@+id/a13"    
    android:icon="@drawable/ic_radiator"
    android:title="@string/a13" />

  <item android:id="@+id/a14"    
    android:icon="@drawable/ic_saffron"
    android:title="@string/a14" />




</menu>
